fix spacing issues

--- a/components/TransctionSection/TransactionSection.module.css
+++ b/components/TransctionSection/TransactionSection.module.css
@@ -10,7 +10,7 @@
   overflow: hidden;
 }
 .TextContainer {
-  width: 50%;
+  width: 55%;
   transition: 0.4s ease all;
 }
 .Image {
@@ -23,8 +23,11 @@
   margin-top: 1rem;
 }
 .Text {
-  font-size: 1.125rem;
+  font-size: 18px;
+  line-height: 28.82px;
   margin-bottom: 2rem;
+  font-weight: 400;
+  color: rgba(0, 0, 0, 0.7);
 }
 @media screen and (max-width: 1030px) {
   .TransactionSection {
